session-6/inventory-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service-deployment
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
      - name: inventory-service
        image: sushantdey/inventory-service:latest
        ports:
        - containerPort: 8082
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "200"
